dbt models added

--- a/demo_dbt_databricks_project/dbt_project.yml
+++ b/demo_dbt_databricks_project/dbt_project.yml
@@ -6,7 +6,7 @@ name: 'demo_dbt_databricks_project'
 version: '1.0.0'
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'demo_dbt_databricks_project'
+profile: 'demo_dbt_databricks_profile'
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -31,6 +31,14 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   demo_dbt_databricks_project:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    bronze:
+      +materialized: incremental
+      +schema: 01_bronze
+    silver:
+      +materialized: incremental
+      +schema: 02_silver
+    gold:
+      +materialized: materialized_view
+      +schema: 03_gold
+flags:
+  use_materialization_v2: true
