add constraints to slv models

--- a/demo_dbt_databricks_project/models/gold/_gld_dim_customer.yml
+++ b/demo_dbt_databricks_project/models/gold/_gld_dim_customer.yml
@@ -8,13 +8,13 @@ models:
       - name: dim_customer_key
         data_type: string
         description: Customer surrogate key
-        tests:
+        data_tests:
           - unique
           - not_null
         
       - name: dim_customer_no
         description: This is a unique identifier for a customer
-        tests:
+        data_tests:
           - unique
           - not_null
 
