--- a/demo_dbt_databricks_project/models/gold/_gld_dim_day.yml
+++ b/demo_dbt_databricks_project/models/gold/_gld_dim_day.yml
@@ -8,7 +8,7 @@ models:
       - name: dim_day_key
         data_type: int
         description: Day in yyyymmdd format
-        tests:
+        data_tests:
           - unique
           - not_null
         
