--- a/demo_dbt_databricks_project/models/silver/_slv_payments.yml
+++ b/demo_dbt_databricks_project/models/silver/_slv_payments.yml
@@ -4,17 +4,28 @@ models:
   - name: slv_payments
     description: Silver payments table
 
+    constraints:
+      - type: primary_key
+        columns: [payment_key]
+        warn_unenforced: false
+
+      - type: foreign_key
+        columns: [order_key]
+        to: ref('slv_orders')
+        to_columns: [order_key]
+        warn_unenforced: false
+
     columns:
       - name: payment_key
         data_type: string
-        tests:
+        data_tests:
           - unique
           - not_null
         description: Payment surrogate key
 
       - name: payment_no
         data_type: string
-        tests:
+        data_tests:
           - unique
           - not_null
         description: This is a unique identifier for an payment
@@ -22,18 +33,20 @@ models:
       - name: order_key
         data_type: string
         description: Foreign key to the slv_orders table
-        tests:
+        data_tests:
           - not_null
           - relationships:
-              to: ref('slv_orders')
-              field: order_key
+              arguments:
+                to: ref('slv_orders')
+                field: order_key
 
       - name: payment_method
         data_type: string
         description: Payment method
-        tests:
+        data_tests:
           - accepted_values:
-              values: ['credit_card', 'coupon', 'bank_transfer', 'gift_card']
+              arguments:
+                values: ['credit_card', 'coupon', 'bank_transfer', 'gift_card']
 
       - name: payment_amount
         data_type: decimal
