add dbt unique key

--- a/demo_dbt_databricks_project/models/silver/_slv_customers.yml
+++ b/demo_dbt_databricks_project/models/silver/_slv_customers.yml
@@ -5,6 +5,9 @@ models:
     description: Silver customer table
 
     constraints:
+      - type: not_null
+        columns: [customer_key]
+
       - type: primary_key
         columns: [customer_key]
         warn_unenforced: false
