--- a/demo_dbt_databricks_project/models/silver/_slv_orders.yml
+++ b/demo_dbt_databricks_project/models/silver/_slv_orders.yml
@@ -5,6 +5,9 @@ models:
     description: This table has basic information about orders, as well as some derived facts based on payments
 
     constraints:
+      - type: not_null
+        columns: [order_key]
+
       - type: primary_key
         columns: [order_key]
         warn_unenforced: false
